Few sonar issues addressed